WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114840
StackFrame::column() returning bogus value
https://bugs.webkit.org/show_bug.cgi?id=114840
Summary
StackFrame::column() returning bogus value
Oliver Hunt
Reported
2013-04-18 17:35:18 PDT
StackFrame::column() returning bogus value
Attachments
Patch
(32.53 KB, patch)
2013-04-18 17:36 PDT
,
Oliver Hunt
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2013-04-18 17:36:35 PDT
Created
attachment 198782
[details]
Patch
Oliver Hunt
Comment 2
2013-04-18 18:32:49 PDT
Committed
r148720
: <
http://trac.webkit.org/changeset/148720
>
Benjamin Poulain
Comment 3
2013-04-18 19:08:25 PDT
The test fast/js/stack-trace.html fails after this patch:
http://build.webkit.org/results/Apple%20MountainLion%20Release%20WK2%20(Tests)/r148720%20(8143)/results.html
It needs rebaseline I guess.
Jessie Berlin
Comment 4
2013-04-18 19:32:19 PDT
This is happening on Lion as well:
http://build.webkit.org/results/Apple%20Lion%20Release%20WK1%20(Tests)/r148720%20(11670)/fast/js/stack-trace-diff.txt
--- /Volumes/Data/slave/lion-release-tests-wk1/build/layout-test-results/fast/js/stack-trace-expected.txt +++ /Volumes/Data/slave/lion-release-tests-wk1/build/layout-test-results/fast/js/stack-trace-actual.txt @@ -315,7 +315,44 @@ 59 at eval code 60 eval at [native code] 61 selfRecursive3 at stack-trace.js:69:8 - 62 global code at stack-trace.js:72:20 + 62 at eval code + 63 eval at [native code] + 64 selfRecursive3 at stack-trace.js:69:8 + 65 at eval code + 66 eval at [native code] + 67 selfRecursive3 at stack-trace.js:69:8 + 68 at eval code + 69 eval at [native code] + 70 selfRecursive3 at stack-trace.js:69:8 + 71 at eval code + 72 eval at [native code] + 73 selfRecursive3 at stack-trace.js:69:8 + 74 at eval code + 75 eval at [native code] + 76 selfRecursive3 at stack-trace.js:69:8 + 77 at eval code + 78 eval at [native code] + 79 selfRecursive3 at stack-trace.js:69:8 + 80 at eval code + 81 eval at [native code] + 82 selfRecursive3 at stack-trace.js:69:8 + 83 at eval code + 84 eval at [native code] + 85 selfRecursive3 at stack-trace.js:69:8 + 86 at eval code + 87 eval at [native code] + 88 selfRecursive3 at stack-trace.js:69:8 + 89 at eval code + 90 eval at [native code] + 91 selfRecursive3 at stack-trace.js:69:8 + 92 at eval code + 93 eval at [native code] + 94 selfRecursive3 at stack-trace.js:69:8 + 95 at eval code + 96 eval at [native code] + 97 selfRecursive3 at stack-trace.js:69:8 + 98 at eval code + 99 eval at [native code] --> Stack Trace: 0 throwError at stack-trace.js:77:12
Oliver Hunt
Comment 5
2013-04-18 20:33:59 PDT
goddammit i think different vm stack size? (In reply to
comment #4
)
> This is happening on Lion as well: > >
http://build.webkit.org/results/Apple%20Lion%20Release%20WK1%20(Tests)/r148720%20(11670)/fast/js/stack-trace-diff.txt
> > --- /Volumes/Data/slave/lion-release-tests-wk1/build/layout-test-results/fast/js/stack-trace-expected.txt > +++ /Volumes/Data/slave/lion-release-tests-wk1/build/layout-test-results/fast/js/stack-trace-actual.txt > @@ -315,7 +315,44 @@ > 59 at eval code > 60 eval at [native code] > 61 selfRecursive3 at stack-trace.js:69:8 > - 62 global code at stack-trace.js:72:20 > + 62 at eval code > + 63 eval at [native code] > + 64 selfRecursive3 at stack-trace.js:69:8 > + 65 at eval code > + 66 eval at [native code] > + 67 selfRecursive3 at stack-trace.js:69:8 > + 68 at eval code > + 69 eval at [native code] > + 70 selfRecursive3 at stack-trace.js:69:8 > + 71 at eval code > + 72 eval at [native code] > + 73 selfRecursive3 at stack-trace.js:69:8 > + 74 at eval code > + 75 eval at [native code] > + 76 selfRecursive3 at stack-trace.js:69:8 > + 77 at eval code > + 78 eval at [native code] > + 79 selfRecursive3 at stack-trace.js:69:8 > + 80 at eval code > + 81 eval at [native code] > + 82 selfRecursive3 at stack-trace.js:69:8 > + 83 at eval code > + 84 eval at [native code] > + 85 selfRecursive3 at stack-trace.js:69:8 > + 86 at eval code > + 87 eval at [native code] > + 88 selfRecursive3 at stack-trace.js:69:8 > + 89 at eval code > + 90 eval at [native code] > + 91 selfRecursive3 at stack-trace.js:69:8 > + 92 at eval code > + 93 eval at [native code] > + 94 selfRecursive3 at stack-trace.js:69:8 > + 95 at eval code > + 96 eval at [native code] > + 97 selfRecursive3 at stack-trace.js:69:8 > + 98 at eval code > + 99 eval at [native code] > > --> Stack Trace: > 0 throwError at stack-trace.js:77:12
Ádám Kallai
Comment 6
2013-04-19 08:04:47 PDT
Now the result is the same on each ports. Do you think we should update the generic expected file? or It's wrong result. For example:
http://build.webkit.org/results/EFL%20Linux%2064-bit%20Release/r148738%20(11789)/fast/js/stack-trace-pretty-diff.html
http://build.webkit.org/results/GTK%20Linux%2064-bit%20Debug%20WK1/r148739%20(1348)/fast/js/stack-trace-pretty-diff.html
http://build.webkit.sed.hu/results/x86-64%20Linux%20Qt%20Release/r148740%20(50291)/fast/js/stack-trace-pretty-diff.html
Oliver Hunt
Comment 7
2013-04-19 08:12:56 PDT
(In reply to
comment #6
)
> Now the result is the same on each ports. Do you think we should update the generic expected file? or It's wrong result. > > For example: > >
http://build.webkit.org/results/EFL%20Linux%2064-bit%20Release/r148738%20(11789)/fast/js/stack-trace-pretty-diff.html
> >
http://build.webkit.org/results/GTK%20Linux%2064-bit%20Debug%20WK1/r148739%20(1348)/fast/js/stack-trace-pretty-diff.html
> >
http://build.webkit.sed.hu/results/x86-64%20Linux%20Qt%20Release/r148740%20(50291)/fast/js/stack-trace-pretty-diff.html
Yeah, update the generic file. Clearly my build (i have a custom clang so i can have as an) is producing a different stack size so running out of stack space earlier. We should probably work out how to make the test resilient to that in the future, but for now just update the text results.
Jessie Berlin
Comment 8
2013-04-19 08:21:14 PDT
Updated the expected results in
http://trac.webkit.org/changeset/148746
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug