StackFrame::column() returning bogus value https://bugs.webkit.org/show_bug.cgi?id=114840

Reviewed by Gavin Barraclough.

Source/JavaScriptCore:

Don't add one part of the expression offset to the other part of the expression.
Make StackFrame::toString() include the column info.

* interpreter/Interpreter.cpp:
(JSC::StackFrame::expressionInfo):
(JSC::StackFrame::toString):

LayoutTests:

Update test result

* fast/js/stack-trace-expected.txt:

Canonical link: https://commits.webkit.org/133236@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148720 268f45cc-cd09-0410-ab3c-d52691b4dbfc